k8s/lvan/prometheus/lvan.k3s.prometheus.all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wangtengda
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: wangtengda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.30.3
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: wangtengda
spec:
  selector:
    app: prometheus
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: wangtengda
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`10.100.7.150`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
